# folderol

./: .gitignore  README.md  dune-project  folderol.opam
examples/: assoc.txt  distrib.txt  distributive.fl
src/: dune  folderol.ml  syntax.ml  unify.ml  unify.mli
src/lib/: driver.ml  dune  iStd.ml  infer.ml  lexer.mll  parser.mly  syntax.ml  unify.ml  unify.mli
